# skillmine

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  FUNCTIONAL-REQUIREMENTS.md  LICENSE  PRD-SPM-v2.md  PRD-SPM.md  README.md  README_REVIEW.md  RESEARCH.md  RESEARCH_EXTERNAL_TOOLS.md  USER-STORIES.md  claude-skills-ecosystem-report.md  configure-repo.sh  evaluation_report.md  findings.md  github_agent_repos_analysis_report.md  local-env-investigation.md  parse_repos.py  progress.md  repos.json  repos_sample.json  task_plan.md
.github/: configure-repo.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: branding.md
docs/: MASTER-PLAN.md  PRODUCT-DIRECTION-GPT5.md  PRODUCT-DIRECTION.md  STRATEGY-v2.md  alpha-parity-qa.md  alpha-release-readiness.md  bugs.md  waterflow-constitution.md
docs/issues/: vision-epics.md
docs/plans/: 2026-03-15-tui-final-stabilization.md  2026-03-16-skillmine-create-closed-loop-design.md  2026-03-16-skillmine-create-closed-loop-implementation.md  2026-03-20-tui-experience-polish.md
docs/roadmap/: vision-roadmap.md
src/: main.rs
src/cli/: agent.rs  api.rs  bundle.rs  command.rs  commands.rs  create.rs  diagnostics.rs  hello.rs  instructions.rs  mod.rs  model.rs  pure.rs  state.rs  summary.rs  tests.rs
src/commands/: mod.rs
src/config/: io.rs  mod.rs  settings.rs
src/core/: mod.rs  resolver.rs  skill.rs
src/error/: mod.rs
src/installer/: effect.rs  mod.rs  (+1 more)
test-manual/: skills.lock.toml
web/: .gitignore  package-lock.json  package.json  tailwind.config.js
(+32 files in other folders)
