[package]
name = "skillmine"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
eyre = "0.6"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
config = "0.13"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
